[package]
name = "ektox"
version = "0.1.0"
edition = "2021"
authors = ["Luca Xiang <luca.xiang@outlook.com>"]
categories = ["window64", "window-switcher", "application-launcher"]
description = "switch window with specify hotkey"

[dependencies.windows]
version = "0.35.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse"
]

[dependencies.serde_json]
version = "1.0.79"


[dependencies.serde]
version = "1.0.136"
features = ["derive"]